# vorbis

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  seeking_example.c
lib/: CMakeLists.txt
